グループ関連

--- a/Django/item_tracker/tracker/templates/join_group.html
+++ b/Django/item_tracker/tracker/templates/join_group.html
@@ -4,8 +4,12 @@
 <h2>グループへ参加する</h2>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form.group_id.label_tag }}
+    {{ form.group_id }}
+    {{ form.password.label_tag }}
+    {{ form.password }}
     <button type="submit">参加</button>
     <button><a href="{% url 'tracker:create_group' %}">グループを作成する</a></button>
 </form>
+
 {% endblock %}
