--- a/Django/item_tracker/tracker/templates/group_detail.html
+++ b/Django/item_tracker/tracker/templates/group_detail.html
@@ -3,7 +3,7 @@
 {% block contents %}
 
 <h4>{{ group.group_name }}（ホスト: {% if group.user == request.user %} あなた） {% else %} {{ group.user.username }}） {% endif %}</h4>
-
+<p><strong>グループID: {{ group.group_id }}</strong></p>
 <ul>
     {% for member in group.groupmember_set.all %}
     <li>{% if member.user == request.user %} <strong><u><font color="green">{{ member.user.username }}</font></u></strong> {% else %} {{ member.user.username }} {% endif %}</li>
