--- a/Django/item_tracker/tracker/templates/group_detail.html
+++ b/Django/item_tracker/tracker/templates/group_detail.html
@@ -2,13 +2,38 @@
 
 {% block contents %}
 
-<h4>{{ group.group_name }}（ホスト: {% if group.user == request.user %} あなた） {% else %} {{ group.user.username }}） {% endif %}</h4>
-<p><strong>グループID: {{ group.group_id }}</strong></p>
-<ul>
-    {% for member in group.groupmember_set.all %}
-    <li>{% if member.user == request.user %} <strong><u><font color="green">{{ member.user.username }}</font></u></strong> {% else %} {{ member.user.username }} {% endif %}</li>
-    {% endfor %}
-</ul>
-<button><a href="{% url 'tracker:mypage' %}">グループ一覧に戻る</a></button>
+<!-- Page content-->
+<section class="py-5">
+    <div class="container px-5">
+        <div class="row">
+            <div class="bg-light rounded-3 py-5 px-4 px-md-5">
+                <div class="col-6" style="position: relative;">
+                    <div class="bg-light rounded-3 py-5 px-4 px-md-5">
+                        <h4>{{ group.group_name }}（ホスト: {% if group.user == request.user %} あなた） {% else %} {{ group.user.username }}） {% endif %}</h4>
+                        <p><strong>グループID:{{ group.group_id }}</strong></p>
+                        <ul>
+                            {% for member in group.groupmember_set.all %}
+                            <li>{% if member.user == request.user %} <strong><u><font color="green">{{ member.user.username }}</font></u></strong> {% else %} {{ member.user.username }} {% endif %}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                <div class="col" id="check_list" style="overflow-y: scroll;">
+                    <div class="bg-light rounded-3 py-5 px-4 px-md-5">
+                        <ul>
+                            {% if assets %}
+                                {% for asset in assets %}
+                                    <li>{{ asset.asset_name }}</li>
+                                {% endfor %}
+                            {% else %}
+                                <li>このグループには管理項目がありません。</li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </div>
+        </div>
+    </div>
+</div>
+<button><a href="{% url 'tracker:group_list' %}">グループ一覧に戻る</a></button>
 
 {% endblock %}
