--- a/Django/item_tracker/tracker/templates/join_group.html
+++ b/Django/item_tracker/tracker/templates/join_group.html
@@ -1,15 +1,30 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-<h2>グループへ参加する</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.group_id.label_tag }}
-    {{ form.group_id }}
-    {{ form.password.label_tag }}
-    {{ form.password }}
-    <button type="submit">参加</button>
-    <button><a href="{% url 'tracker:create_group' %}">グループを作成する</a></button>
-</form>
+<!-- Page content-->
+<section class="py-5">
+    <div class="container px-5">
+        <!-- Contact form-->
+        <div class="bg-light rounded-3 py-5 px-4 px-md-5">
+            <div class="text-center mb-5">
+                <h1>グループへ参加する</h1>
+                <hr>
+            </div>
+            <div class="row gx-5 justify-content-center">
+                <div class="col-lg-8 col-xl-6">
+                    <form method="post">
+                        {% csrf_token %}
+                        <h5 class="mb-4">{{ form.group_id.label_tag }}{{ form.group_id }}</h5>
+                        <button type="submit">参加</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="d-grid">
+            <button>
+                <a class="nav-link" href="{% url 'tracker:create_group' %}">グループを作成</a>
+            </button>
+        </div>
+    </div>
 
 {% endblock %}
