--- a/Django_Docker/toolkeeper_app/templates/item_add.html
+++ b/Django_Docker/toolkeeper_app/templates/item_add.html
@@ -8,8 +8,9 @@
 {% block contents %}
 <div class="container my-5">
     <form method="POST" enctype='multipart/form-data'>
-        <div class="row my-3" style="text-align: center;">
-            <h3>すべてのアイテムの名前を入力してください。</h3>
+        <div class="row justify-content-around w-100 my-3" style="text-align: center;">
+            <h3 class="col-12 col-md-9 mb-3 mb-md-0" style="text-align: center;">すべてのアイテムの名前を入力してください。</h3>
+            <button class="col-6 col-md-2 btn btn-primary my-auto" type="button" onclick="image.onload();">画像読込</button>
         </div>
 
         <hr>
