--- a/Django_Docker/toolkeeper_app/templates/common_history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_add.html
@@ -1,7 +1,7 @@
 <div id="check_list" style="overflow-y: scroll; height: 100%;">
     {% for item in items reversed %}
     <div class="row justify-content-around w-100 my-2">
-        <div class="col-auto col-md-6" style="display:flex; align-items: center; font-size: 16px;">{{ item.item_name }}</div>
+        <div class="col-auto col-md-6" id="item_{{ forloop.counter0 }}_name" style="display:flex; align-items: center; font-size: 16px;">{{ item.item_name }}</div>
         <div class="col-auto">
             {% if forloop.first %}
                 <input class="btn-check" type="radio" id="set_{{ forloop.counter0 }}" name="set" checked>
