--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -53,6 +53,7 @@
 
     <hr>
 
+    <h5 id="confirmation" style="text-align: center;"></h5>
     <div style="display: flex; width: 100%; justify-content: center;">
         <label class="w-auto my-4" for="finish">
             <input class="form-check-input" type="checkbox" id="finish" onclick="submit_check(finish.checked);"> すべてのアイテムをチェックしました。
