--- a/Django_Docker/toolkeeper_app/templates/asset_create.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_create.html
@@ -14,7 +14,7 @@
                 {{ form.as_table }}
                 {{ object.name }}
             </table>
-            <button class="btn btn-primary w-100 mt-3" type="submit">作成</button>
+            <button class="my-btn-green btn btn-primary w-100 mt-3" type="submit">作成</button>
         </form>
     </div>
 </div>
