--- a/Django_Docker/toolkeeper_app/templates/item_add.html
+++ b/Django_Docker/toolkeeper_app/templates/item_add.html
@@ -45,7 +45,7 @@
 
         <hr>
 
-        <button class="btn btn-primary w-100 mt-3" type="submit">登録</button>
+        <button class="my-btn-green btn btn-primary w-100 mt-3" type="submit">登録</button>
     </form>
 </div>
 {% endblock %}
