--- a/Django_Docker/static/css/mystyle.css
+++ b/Django_Docker/static/css/mystyle.css
@@ -13,32 +13,48 @@ footer {
     margin-bottom: -1rem;
 }
 
+.my-btn
+
 .my-btn-red {
-    color: crimson !important;
+    color: rgb(230, 0, 70) !important;
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(230, 0, 70);
 }
 .my-btn-red:hover {
-    color: crimson !important;
+    color: rgb(190, 0, 50) !important;
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(190, 0, 50);
 }
 .my-btn-red:active {
-    color: crimson !important;
+    color: rgb(160, 0, 40) !important;
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(160, 0, 40);
 }
-
-.my-btn-orange {
-    color: orange !important;
+.my-btn .btn-check:checked + .my-btn-red {
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(230, 0, 70);
+    border-color: rgb(230, 0, 70);
 }
-.my-btn-orange:hover {
-    color: orange !important;
+.my-btn .btn-check:checked + .my-btn-red:hover {
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(190, 0, 50);
+    border-color: rgb(190, 0, 50);
 }
-.my-btn-orange:active {
-    color: orange !important;
+.my-btn .btn-check:checked + .my-btn-red:active {
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(160, 0, 40);
+    border-color: rgb(160, 0, 40);
 }
 
 .my-btn-green {
-    color: limegreen !important;
+    background-color: rgb(0, 220, 60) !important;
+    border-color: rgb(0, 220, 60) !important;
 }
 .my-btn-green:hover {
-    color: limegreen !important;
+    background-color: rgb(0, 190, 55) !important;
+    border-color: rgb(0, 190, 55) !important;
 }
 .my-btn-green:active {
-    color: limegreen !important;
+    background-color: rgb(0, 150, 50) !important;
+    border-color: rgb(0, 150, 50) !important;
 }
