--- a/Django_Docker/toolkeeper_app/templates/asset_detail.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_detail.html
@@ -76,7 +76,7 @@
         </div>
     </div> -->
     
-    <!-- <a class="btn btn-primary" href="{% url 'toolkeeper_app:test_page' 4 %}"> テストページ</a> -->
+    <a class="my-btn-green btn btn-primary" href="{% url 'toolkeeper_app:test_page' 4 %}"> テストページ</a>
     <a class="btn btn-primary" href="{% url 'toolkeeper_app:check_image_add' asset_id %}"> チェックする</a>
 </div>
 {% endblock %}
