--- a/Django/item_tracker/static/css/mystyle.css
+++ b/Django/item_tracker/static/css/mystyle.css
@@ -45,7 +45,7 @@ button.learn-more .circle {
   margin: 0;
   width: 3rem;
   height: 3rem;
-  background: #282936;
+  background: #212529;
   border-radius: 1.625rem;
 }
 button.learn-more .circle .icon {
@@ -83,7 +83,7 @@ button.learn-more .button-text {
   bottom: 0;
   padding: 0.75rem 0;
   margin: 0 0 0 1.85rem;
-  color: #282936;
+  color: #212529;
   font-weight: 700;
   line-height: 1.6;
   text-align: center;
@@ -98,4 +98,90 @@ button:hover .circle .icon.arrow {
 }
 button:hover .button-text {
   color: #fff;
+}
+
+
+.scrollable-list {
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.scrollable-detail {
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900);
+
+.btn-2 {
+    background: #212529;
+    letter-spacing: 0;
+    color: #fff;
+}
+.btn-2:hover,
+.btn-2:active {
+    background: #212529;
+    letter-spacing: 5px;
+    color: #fff;
+}
+.btn-2:after,
+.btn-2:before {
+    background: #666666;
+    backface-visibility: hidden;
+    border: 1px solid rgba(255,255,255,0);
+    bottom: 0px;
+    content: " ";
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    transition: all 280ms ease-in-out;
+    width: 0;
+    color: #fff;
+}
+.btn-2:hover:after,
+.btn-2:hover:before {
+    background: #666666;
+    backface-visibility: hidden;
+    border-color: #fff;
+    transition: width 350ms ease-in-out;
+    width: 70%;
+    color: #fff;
+}
+.btn-2:hover:before {
+    background: #666666;
+    bottom: auto;
+    top: 0;
+    width: 70%;
+    color: #fff;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+}
+.btn:hover {
+  text-decoration: none;
+}
+.btn-3 {
+  background: #212529;
+  border: 1px solid #212529;
+  box-shadow: 0px 2px 0 #212529, 2px 4px 6px #212529;
+  font-weight: 900;
+  letter-spacing: 1px;
+  transition: all 150ms linear;
+  color: #fff;
+}
+.btn-3:hover {
+  background: #666666;
+  border: 1px solid rgba(0,0,0,0.05);
+  box-shadow: 1px 1px 2px rgba(255,255,255,0.2);
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: -1px -1px 0 #888888;
+  transition: all 250ms linear;
 }
