--- a/Django_Docker/toolkeeper_app/templates/image_add.html
+++ b/Django_Docker/toolkeeper_app/templates/image_add.html
@@ -20,7 +20,7 @@
 
     <div class="my-btn row w-50 mt-4 mb-5 mx-auto" id="control" style="display: none;">
         <input class="btn-check" type="checkbox" id="check" disabled>
-        <label class="my-btn-red btn" for="check" onclick="del_box();">外枠をリセット</label>
+        <label class="my-check-red btn" for="check" onclick="del_box();">外枠をリセット</label>
     </div>
     
     <div class="row">
