--- a/Django/item_tracker/tracker/templates/asset_list.html
+++ b/Django/item_tracker/tracker/templates/asset_list.html
@@ -6,9 +6,6 @@
 
 {% block active_asset_list %}active{% endblock %}
 
-{% block head %}
-<link href="{% static 'css/shop-homepage-gh-pages.css' %}" rel="stylesheet">
-{% endblock %}
 
 {% block contents %}
 <!-- Section-->
@@ -43,35 +40,42 @@
             groupFilterForm.selectedIndex = 0;
           }
         </script>
+        <hr>
+
+        {% if image_list %}
+            <div><p class="d-grid lead fw-normal text-muted text-center mb-3" style="font-size: 15px;">管理項目をクリックすると詳細へ移ります</p></div>
+        {% endif %}
         <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-3">
             {% for image in page_obj %}
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!--badge-->
-                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">box</div>
-                        <!-- Product image-->
-                        {% if image.image %}
-                            <img class="card-img-top" src="{{ image.image.url }}" alt="..." />
-                        {% endif %}
-                        <!-- Product details-->
-                        <div class="card-body">
-                            <div class="text-center">
-                                <!-- Product name-->
-                                <h5 class="fw-bolder">{{ image.asset.asset_name }}</h5>
-                                <!-- Product reviews-->
-                                <div class="d-flex justify-content-center small text-warning mb-2">
-                                    <!--何か入れたければ入れる-->
+                        <a class="btn" href="{% url 'tracker:asset_detail' image.asset.id %}">
+                            <!--badge-->
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">box</div>
+                            <!-- Product image-->
+                            {% if image.image %}
+                                <img class="card-img-top" src="{{ image.image.url }}" alt="..." />
+                            {% endif %}
+                            <!-- Product details-->
+                            <div class="card-body">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">{{ image.asset.asset_name }}</h5>
+                                    <!-- Product reviews-->
+                                    <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <!--何か入れたければ入れる-->
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!-- <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'tracker:asset_detail' image.asset.id %}">詳細</a></div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 {% empty %}
-                <p>管理項目がありません。</p>
+                <p>管理項目がありません</p>
             {% endfor %}
         </div>
         <!--<p>{{ image_list }}</p>-->
