--- a/Django/item_tracker/tracker/templates/group_detail.html
+++ b/Django/item_tracker/tracker/templates/group_detail.html
@@ -17,7 +17,12 @@
                     <div class="scrollable-detail">
                         <ul>
                             {% for member in group.groupmember_set.all %}
-                            <li><h5>{% if member.user == group.user %}<u>{{ member.user.username }}（ホスト）</u>{% elif member.user == request.user %}<font color="#99CC33">{{ member.user.username }}</font>{% else %} {{ member.user.username }} {% endif %}</h5></li>
+                                <li><h5>
+                                    {% if member.user == group.user and member.user == request.user %}<u><font color="#99CC33">{{ member.user.username }}</font>（ホスト）</u>
+                                    {% elif member.user == group.user %}<u>{{ member.user.username }}（ホスト）</u>
+                                    {% elif member.user == request.user %}<font color="#99CC33">{{ member.user.username }}</font>
+                                    {% else %} {{ member.user.username }} {% endif %}
+                                </h5></li>
                             {% endfor %}
                         </ul>
                     </div>
