--- a/Django/item_tracker/tracker/templates/image_add.html
+++ b/Django/item_tracker/tracker/templates/image_add.html
@@ -9,7 +9,7 @@
 <div class="container my-5">
     <div class="row justify-content-between my-4" id="checked" style="display: none;">
         <h5 class="col-10" style="text-align: center; margin-top: 0.5rem;">全てのアイテムが入るように、外枠を囲ってください。</h5>
-        <button class="col-2 btn btn-primary my-auto" type="button" onclick="auto_fit();">画像読込</button>
+        <button class="col-2 btn btn-3 my-auto" type="button" onclick="auto_fit();">画像読込</button>
     </div>
 
     <div id="preview" style="position: relative; width: 100%; margin: auto;">
@@ -31,7 +31,7 @@
                 {{ item_add_form.as_table }}
                 {{ result_add_form.as_table }}
             </table>
-            <button class="btn btn-primary w-100 mt-3" type="submit" id="submit" disabled>{{ submit }}</button>
+            <button class="btn btn-2 w-100 mt-2" type="submit" id="submit" disabled>{{ submit }}</button>
         </form>
     </div>
     
