--- a/Django/item_tracker/tracker/templates/item_add.html
+++ b/Django/item_tracker/tracker/templates/item_add.html
@@ -36,15 +36,15 @@
                 <hr>
                 
                 <div class="row justify-content-around w-100 ms-0" id="form_edit">
-                    <button class="col-5 btn btn-primary" type="button" id="item_add">追加</button>
-                    <button class="col-5 btn btn-primary" type="button" id="item_del">削除</button>
+                    <button class="col-5 btn btn-3" type="button" id="item_add">追加</button>
+                    <button class="col-5 btn btn-3" type="button" id="item_del">削除</button>
                 </div>
             </div>
         </div>
 
         <hr>
 
-        <button class="btn btn-primary w-100 mt-3" type="submit">登録</button>
+        <button class="btn btn-2 w-100 mt-3" type="submit">登録</button>
     </form>
 </div>
 {% endblock %}
