--- a/Django/item_tracker/tracker/templates/history_detail.html
+++ b/Django/item_tracker/tracker/templates/history_detail.html
@@ -104,8 +104,7 @@
             <a class="btn btn-3 float-right" href="{% url 'tracker:history_list' %}">履歴一覧に戻る</a>
         </div>
     </div>
-</div>
-
+</section>
 
 {% endblock %}
 
