--- a/Django/item_tracker/accounts/templates/account/password_reset.html
+++ b/Django/item_tracker/accounts/templates/account/password_reset.html
@@ -22,7 +22,7 @@
                     {% bootstrap_form form %}
                 </div>
                 
-                <button class="btn btn-primary" type="submit">送信</button>
+                <button class="btn btn-3" type="submit">送信</button>
             </form>
         </div>
     </div>
