--- a/Django/item_tracker/accounts/templates/account/password_reset_from_key.html
+++ b/Django/item_tracker/accounts/templates/account/password_reset_from_key.html
@@ -21,7 +21,7 @@
                     {% bootstrap_form form %}
                 </div>
                 
-                <button class="btn btn-primary" type="submit">変更</button>
+                <button class="btn btn-3" type="submit">変更</button>
             </form>
             {% else %}
             <p>パスワードは変更されています。</p>
