--- a/Django/item_tracker/accounts/templates/account/signup.html
+++ b/Django/item_tracker/accounts/templates/account/signup.html
@@ -48,7 +48,7 @@
                         {% endif %}
                         
                         <div class="d-grid mb-3">
-                            <button class="btn btn-primary btn-lg" id="submitButton" type="submit">登録</button>
+                            <button class="btn btn-3 btn-lg" id="submitButton" type="submit">登録</button>
                         </div>
                         
                     </form>
