--- a/Django/item_tracker/tracker/templates/group_list.html
+++ b/Django/item_tracker/tracker/templates/group_list.html
@@ -31,7 +31,7 @@
         </div>
         <div class="d-grid">
             <button class="btn btn-lg btn-2">
-                <a class="nav-link" href="{% url 'tracker:create_group' %}">グループ登録</a>
+                <a class="nav-link" href="{% url 'tracker:join_group' %}">グループ登録</a>
             </button>
         </div>
         <br>
