--- a/Django/item_tracker/tracker/templates/history_list.html
+++ b/Django/item_tracker/tracker/templates/history_list.html
@@ -36,8 +36,8 @@
                                         <div class="d-flex justify-content-center small text-warning mb-2">
                                             確認日時: {{ history.checked_at }}
                                             <br>
-                                            更新日時: {{ history.updated_at }}
-                                            <br>
+                                            <!-- 更新日時: {{ history.updated_at }}
+                                            <br> -->
                                             グループ: {{ history.group }}
                                         </div>
                                     </div>
