--- a/Django/item_tracker/accounts/templates/account/email_confirm.html
+++ b/Django/item_tracker/accounts/templates/account/email_confirm.html
@@ -16,7 +16,7 @@
 
                 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
                     {% csrf_token %}
-                    <button class="btn btn-primary" type="submit">確定</button>
+                    <button class="btn btn-3" type="submit">確定</button>
                 </form>
 
             {% else %}
