--- a/Django/item_tracker/tracker/templates/history_detail.html
+++ b/Django/item_tracker/tracker/templates/history_detail.html
@@ -10,32 +10,34 @@
         </div>
 
         <div class="container my-5">
+            <hr>
             <div class="row">
                 <div class="col-8">
                     <div class="col-3 col-lg-2">
                         <strong>写真</strong>
                     </div>
                     <div class="col-9 col-lg-10">
-                        <img id="image" src="{{ history.image.url }}" style="display: none;"/>
+                        <img src="{{ history.image.url }}" style="display: none;"/>
                     </div>
                 </div>
-                <div class="col scrollable-detail" id="check_list">
-                    <div>
-                        <strong>アイテム一覧</strong>
+                <div class="col scroll" id="check_list">
+                    <div class="mb-3">
+                        <strong>アイテム一覧/詳細結果</strong>
                     </div>
                     <div class="col-9 col-lg-10">
                         {% for result in history.result_set.all %}
                             {% if result.result_class != 9 %}
-                            <li>
-                                {{ result.item.item_name }} [詳細結果:
+                            <li class="mb-2">
+                                {{ result.item.item_name }}：
                                 {% if result.result_class == 0 %}
-                                    無し
+                                    <u><font color="#ff6347">無し</font></u>
+                            
                                 {% elif result.result_class == 1 %}
-                                    有り
+                                    <u><font color="#99CC33">有り</font></u>
                                 {% else %}
                                     {{ result.result_class }}
                                 {% endif %}
-                                ]
+                                
                             </li>
                             {% endif %}
                         {% empty %}
@@ -82,16 +84,16 @@
             <hr>
 
             <div class="row">
-                <div class="col-3">
+                <div class="col-3 col-lg-2">
                     <strong>確認日時</strong>
-                </div> <div class="col-9">
+                </div> <div class="col-9 col-lg-10">
                     {{ history.checked_at }}
                 </div>
             </div>
             
             <hr>
             
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-3">
                     <strong>更新日時</strong>
                 </div>
@@ -99,7 +101,7 @@
                     {{ history.updated_at }}
                 </div>
             </div>
-            <hr>
+            <hr> -->
 
             <a class="btn btn-3 float-right" href="{% url 'tracker:history_list' %}">履歴一覧に戻る</a>
         </div>
