--- a/Django/item_tracker/tracker/templates/history_detail.html
+++ b/Django/item_tracker/tracker/templates/history_detail.html
@@ -17,7 +17,7 @@
                         <strong>写真</strong>
                     </div>
                     <div class="col-9 col-lg-10">
-                        <img src="{{ history.image.url }}" style="display: none;"/>
+                        <img src="{{ image.image.url }}" style="display: none;"/>
                     </div>
                 </div>
                 <div class="col scroll" id="check_list">
