--- a/Django/item_tracker/static/css/mystyle.css
+++ b/Django/item_tracker/static/css/mystyle.css
@@ -13,37 +13,39 @@ footer {
     margin-bottom: -1rem;
 }
 
-.my-btn
+.my-btn {
+  transition: all 0.45s cubic-bezier(0.65,0,0.076,1);
+}
 
-.my-btn-red {
-    color: rgb(230, 0, 70) !important;
-    background-color: rgb(255, 255, 255);
-    border-color: rgb(230, 0, 70);
+.my-check-red {
+  color: rgba(230, 0, 70, 1) !important;
+  background-color: rgba(255, 255, 255, 1);
+  border-color: rgba(230, 0, 70, 1);
 }
-.my-btn-red:hover {
-    color: rgb(190, 0, 50) !important;
-    background-color: rgb(255, 255, 255);
-    border-color: rgb(190, 0, 50);
+.my-check-red:hover {
+  color: rgba(190, 0, 50, 1) !important;
+  background-color: rgba(255, 255, 255, 1);
+  border-color: rgba(190, 0, 50, 1);
 }
-.my-btn-red:active {
-    color: rgb(160, 0, 40) !important;
-    background-color: rgb(255, 255, 255);
-    border-color: rgb(160, 0, 40);
+.my-check-red:active {
+  color: rgba(160, 0, 40, 1) !important;
+  background-color: rgba(255, 255, 255, 1);
+  border-color: rgba(160, 0, 40, 1);
 }
-.my-btn .btn-check:checked + .my-btn-red {
-    color: rgb(255, 255, 255) !important;
-    background-color: rgb(230, 0, 70);
-    border-color: rgb(230, 0, 70);
+.my-btn-red, .my-btn .btn-check:checked + .my-check-red {
+  color: rgba(255, 255, 255, 1) !important;
+  background-color: rgba(230, 0, 70, 1) !important;
+  border-color: rgba(230, 0, 70, 1) !important;
 }
-.my-btn .btn-check:checked + .my-btn-red:hover {
-    color: rgb(255, 255, 255) !important;
-    background-color: rgb(190, 0, 50);
-    border-color: rgb(190, 0, 50);
+.my-btn-red:hover, .my-btn .btn-check:checked + .my-check-red:hover {
+  color: rgba(255, 255, 255, 1) !important;
+  background-color: rgba(190, 0, 50, 1) !important;
+  border-color: rgba(190, 0, 50, 1) !important;
 }
-.my-btn .btn-check:checked + .my-btn-red:active {
-    color: rgb(255, 255, 255) !important;
-    background-color: rgb(160, 0, 40);
-    border-color: rgb(160, 0, 40);
+.my-btn-red:active, .my-btn .btn-check:checked + .my-check-red:active {
+  color: rgba(255, 255, 255, 1) !important;
+  background-color: rgba(160, 0, 40, 1) !important;
+  border-color: rgba(160, 0, 40, 1) !important;
 }
 
 .my-btn-green {
