--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -10,7 +10,7 @@
 
     <div style="display: flex; width: 100%; justify-content: center;">
         <div class="row justify-content-between align-items-center mb-3 mx-0" style="width: 80%;">
-            <h5 class="col col-lg-auto align-self-start" style="text-align: center; margin-top: 0.5rem;">全てのアイテムが入るように、外枠を囲ってください。</h5>
+            <h5 class="col col-lg-auto align-self-start" style="text-align: center; margin-top: 0.5rem;">すべてのアイテムを囲ってください。</h5>
             <button class="col-auto col-lg-2 align-self-end btn btn-primary my-auto" type="button" onclick="auto_fit(); draw_box()">画像読込</button>
         </div>
     </div>
